--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -35,6 +35,8 @@
     <!-- Default LED off time for notification LED in milliseconds. -->
     <integer name="config_defaultNotificationLedOff">6000</integer>
 
+    <bool name="config_animateScreenLights">false</bool>
+
     <!-- The attenuation in dB applied to the sound effects played
          through AudioManager.playSoundEffect() when no volume is specified. -->
     <integer name="config_soundEffectVolumeDb">-12</integer>
@@ -45,10 +47,6 @@
     <string-array translatable="false" name="config_tether_wifi_regexs">
         <item>wl0.1</item>
     </string-array>
-
-    <!-- Boolean indicating whether the start command should be called on the wireless interface
-         when starting the SoftAp -->
-    <bool name="config_wifiApStartInterface">true</bool>
 
     <!-- List of regexpressions describing the interface (if any) that represent tetherable
          bluetooth interfaces.  If the device doesn't want to support tethering over bluetooth this
@@ -125,13 +123,13 @@
          This must be overridden in platform specific overlays -->
     <integer-array name="config_autoBrightnessLcdBacklightValues">
         <item>41</item>
+	<item>55</item>
         <item>61</item>
         <item>81</item>
+	<item>100</item>
         <item>112</item>
-        <item>143</item>
         <item>163</item>
-        <item>186</item>
-        <item>208</item>
+	<item>198</item>
         <item>231</item>
         <item>255</item>
     </integer-array>
@@ -182,11 +180,11 @@
     <bool name="config_ui_enableFadingMarquee">false</bool>
 
     <!-- Package name providing network location support. -->
-    <string name="config_networkLocationProviderPackageName" translatable="false">com.google.android.location</string>
-
+<!--    <string name="config_networkLocationProviderPackageName" translatable="false">com.google.android.location</string>
+-->
     <!-- Package name providing geocoder API support. -->
-    <string name="config_geocodeProviderPackageName" translatable="false">com.google.android.location</string>
-
+<!--    <string name="config_geocodeProviderPackageName" translatable="false">com.google.android.location</string>
+-->
     <!-- Is the notification LED intrusive? Used to decide if there should be a disable option -->
     <bool name="config_intrusiveNotificationLed">true</bool>
 </resources>
