u8800: change /mnt/sdcard1 to /HWUserData
This reverts commit cc8bd1075ba5505cc3a3b77b67e4a70f17b83055.

--- a/overlay/frameworks/base/core/res/xml/storage_list.xml
+++ b/overlay/frameworks/base/core/res/xml/storage_list.xml
@@ -40,7 +40,7 @@
     		 android:removable="true"
     		 android:allowMassStorage="true" />
 
-    <storage android:mountPoint="/mnt/sdcard1"
+    <storage android:mountPoint="/HWUserData"
     		 android:storageDescription="@string/storage_internal"
     		 android:primary="false"
     		 android:removable="false"
